home page upper one-third

--- a/index.html
+++ b/index.html
@@ -23,11 +23,29 @@
             <img id="home-logo" alt="Contrology Studio" src="images/logo-white.png">
             <section id="menu-sect">
                 <nav>
-                    <a href="about.html">About</a>
-                    <a href="qualification.html">Service</a>
-                    <a href="qualification.html">Booking</a>
-                    <a href="qualification.html">FAQ</a>
-                    <a href="contact.html">Contact</a>
+                    <div class="dropdown">
+                        <a href="#">About</a>
+                        <div class="dropdown-item"><a href="#">Team</a></div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="#">Service</a>
+                        <div class="dropdown-item">
+                            <a href="#">Physiotherapy</a>
+                            <a href="#">Clinical Pilates</a>
+                            <a href="#">Gyrotonic®</a>
+                            <a href="#">Clinical Pilates (Duet)</a>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="#">Booking</a>
+                    </div>
+                    <div class="dropdown">
+                        <a href="#">FAQ</a>
+                        <div class="dropdown-item"><a href="#">Policy</a></div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="#">Contact</a>
+                    </div>
                 </nav>
             </section>
             <section id="home-title">
@@ -40,16 +58,20 @@
         </div>
     </header>
     <main>
-        <div class="main-content">
-            <div class="content">
+        <section id="home-main1">
+            <div style="flex: 3 1">
+                <h2>Everyone is different, so is our studio.</h2>
+                <p>
+                    At Contrology Studio, we believe in individualised movement-therapy. 
+                </p>
             </div>
-        </div>
-        <div class="side-bar">
-            <p id="quotation"></p>
-            <p id="author"></p>
-<!--        <button id="next-button" type="button" onclick="getNextQuote()">Next Quote</button>
--->            
-        </div>
+            <div stype="flex: 1 1">
+                <img src="images/shot01.jpg" alt="">
+            </div>
+        </section>
+        <section id="home-main2">
+
+        </section>
     </main>
     <footer>
         <div class="copyright-area">
