--- a/index.html
+++ b/index.html
@@ -65,12 +65,54 @@
                     At Contrology Studio, we believe in individualised movement-therapy. 
                 </p>
             </div>
-            <div stype="flex: 1 1">
+            <div style="flex: 1 1">
                 <img src="images/shot01.jpg" alt="">
             </div>
         </section>
         <section id="home-main2">
-
+            <div>
+                <div>
+                    <img src="images/shot021.jpg" alt="">
+                </div>
+                <div>
+                    <button>Service</button>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="images/shot022.jpg" alt="">
+                </div>
+                <div>
+                    <button>Booking</button>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="images/shot023.jpg" alt="">
+                </div>
+                <div>
+                    <button>FAQ</button>
+                </div>
+            </div>
+        </section>
+        <section id="home-main3">   
+            <div id="home-main3-1">
+                <img src="images/shot03.jpg" alt="">
+            </div>
+            <div id="home-main3-2">
+                <div>
+                    <h2>
+                        Initial Physiotherapy Assessment & Pilates/Gyrotonic® Session
+                    </h2>
+                    <br>
+                    <p>
+                        Experience our unique 80-minute initial session tailored to your needs, starting with a 30-minute comprehensive assessment followed by a 50-minute Pilates or Gyrotonic® session conducted by a qualified physiotherapist. Together, we’ll set your health goals and develop an individualized program.
+                    </p>
+                </div>
+                <div>
+                    <button>Book Here</button>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
