--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contrology Studio - Flow with Physio, Pilates, Gyrotonic</title>
     <link rel="stylesheet" href="assets/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,9 +15,8 @@
 </head>
 
 <body>
-    <i id="topBtn" class=" fa fa-angle-up" onclick="topFunction()" title="Go to top"></i>
     <header class="video-container">
-        <video preload="auto" controls muted loop>
+        <video preload="auto" autoplay controls muted loop>
             <source src="assets/class.mp4" type="video/mp4">
         </video> 
         <div id="video-message">
@@ -59,6 +57,7 @@
             </section>
         </div>
     </header>
+    <i id="topBtn" class=" fa fa-angle-up" onclick="topFunction()" title="Go to top"></i>
     <main>
         <section id="home-main1">
             <div style="flex: 3 1">
