improve scaling of images in section 1 of home page

--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                     At Contrology Studio, we believe in individualised movement-therapy. 
                 </p>
             </div>
-            <div style="flex: 1 1">
-                <img src="images/shot01.jpg" alt="">
+            <div id="home-main1-right">
             </div>
         </section>
         <section id="home-main2">
