--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Booking</a>
+                        <a href="booking.html#page-header">Booking</a>
                     </div>
                     <div class="dropdown">
                         <a href="#">FAQ</a>
@@ -52,7 +52,9 @@
                 <h1>Contrology Studio</h1>
                 <h2>Control your body . Control your energy</h2>
                 <div>
-                    <button>Book Your Appointment</button>
+                    <a href="booking.html#page-header">
+                        <button>Book Your Appointment</button>
+                    </a>
                 </div>
             </section>
         </div>
@@ -76,7 +78,9 @@
             </div>
             <div>
                 <img src="images/shot022.jpg" alt="">
-                <button>Booking</button>
+                <a href="booking.html#page-header"> 
+                    <button>Booking</button>
+                </a>
             </div>
             <div>
                 <img src="images/shot023.jpg" alt="">
@@ -96,7 +100,9 @@
                     </p>
                 </div>
                 <div>
-                    <button>Book Here</button>
+                    <a href="booking.html#page-header">
+                        <button>Book Here</button>
+                    </a>
                 </div>
             </div>
         </section>
