--- a/booking.html
+++ b/booking.html
@@ -22,8 +22,8 @@
         <div id="menu-sect">
             <nav>
                 <div class="dropdown">
-                    <a href="#">About</a>
-                    <div class="dropdown-item"><a href="#">Team</a></div>
+                    <a href="about.html#page-header">About</a>
+                    <div class="dropdown-item"><a href="about.html#team">Team</a></div>
                 </div>
                 <div class="dropdown">
                     <a href="#">Service</a>
