--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <section id="menu-sect">
                 <nav>
                     <div class="dropdown">
-                        <a href="#">About</a>
-                        <div class="dropdown-item"><a href="#">Team</a></div>
+                        <a href="about.html#page-header">About</a>
+                        <div class="dropdown-item"><a href="about.html#team">Team</a></div>
                     </div>
                     <div class="dropdown">
                         <a href="#">Service</a>
@@ -61,7 +61,7 @@
     </header>
     <i id="topBtn" class=" fa fa-angle-up" onclick="topFunction()" title="Go to top"></i>
     <main>
-        <section id="home-main1">
+        <section id="home-main1" class="flex-row">
             <div style="flex: 3 1">
                 <h2>Everyone is different, so is our studio.</h2>
                 <p>
@@ -71,7 +71,7 @@
             <div id="home-main1-right">
             </div>
         </section>
-        <section id="home-main2">
+        <section id="home-main2" class="flex-row">
             <div>
                 <img src="images/shot021.jpg" alt="">
                 <button>Service</button>
@@ -87,7 +87,7 @@
                 <button>FAQ</button>
             </div>
         </section>
-        <section id="home-main3">   
+        <section id="home-main3" class="flex-row">   
             <div id="home-main3-1">
             </div>
             <div id="home-main3-2">
@@ -109,7 +109,7 @@
         <section id="home-main4">
             <iframe src="https://www.google.com/maps/d/embed?mid=1sMewBJOmuAHziNlrVwF8Kq8Y5P3UuGs&ehbc=2E312F" width="100%" height="600"></iframe>
         </section>
-        <section id="home-main5">
+        <section id="home-main5" class="">
             <div id="flow-with-us">
                 <h2>Flow with Us</h2>
                 <p>306/180-186 Burwood Rd, Burwood NSW 2154</p>
