add Service page

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                         <div class="dropdown-item"><a href="about.html#team">Team</a></div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Service</a>
+                        <a href="services.html#page-header">Service</a>
                         <div class="dropdown-item">
-                            <a href="#">Physiotherapy</a>
-                            <a href="#">Clinical Pilates</a>
-                            <a href="#">Gyrotonic®</a>
-                            <a href="#">Clinical Pilates (Duet)</a>
+                            <a href="services.html#physiotherapy">Physiotherapy</a>
+                            <a href="services.html#pilates">Clinical Pilates</a>
+                            <a href="services.html#gyrotonic">Gyrotonic®</a>
+                            <a href="services.html#pilates-duet">Clinical Pilates (Duet)</a>
                         </div>
                     </div>
                     <div class="dropdown">
