--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Contrology Studio - Booking</title>
+    <title>Contrology Studio - About us</title>
     <link rel="stylesheet" href="assets/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,12 +26,12 @@
                     <div class="dropdown-item"><a href="#team">Team</a></div>
                 </div>
                 <div class="dropdown">
-                    <a href="#">Service</a>
+                    <a href="services.html#page-header">Service</a>
                     <div class="dropdown-item">
-                        <a href="#">Physiotherapy</a>
-                        <a href="#">Clinical Pilates</a>
-                        <a href="#">Gyrotonic®</a>
-                        <a href="#">Clinical Pilates (Duet)</a>
+                        <a href="services.html#physiotherapy">Physiotherapy</a>
+                        <a href="services.html#pilates">Clinical Pilates</a>
+                        <a href="services.html#gyrotonic">Gyrotonic®</a>
+                        <a href="services.html#pilates-duet">Clinical Pilates (Duet)</a>
                     </div>
                 </div>
                 <div class="dropdown">
