add FAQ and Contact without the contact form

--- a/about.html
+++ b/about.html
@@ -38,11 +38,11 @@
                     <a href="booking.html#page-header">Booking</a>
                 </div>
                 <div class="dropdown">
-                    <a href="#">FAQ</a>
-                    <div class="dropdown-item"><a href="#">Policy</a></div>
+                    <a href="faq.html#page-header">FAQ</a>
+                    <div class="dropdown-item"><a href="faq.html#policy">Policy</a></div>
                 </div>
                 <div class="dropdown">
-                    <a href="#">Contact</a>
+                    <a href="contact.html#page-header">Contact</a>
                 </div>
             </nav>
         </div>
