--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                         <a href="booking.html#page-header">Booking</a>
                     </div>
                     <div class="dropdown">
-                        <a href="#">FAQ</a>
-                        <div class="dropdown-item"><a href="#">Policy</a></div>
+                        <a href="faq.html#page-header">FAQ</a>
+                        <div class="dropdown-item"><a href="faq.html#policy">Policy</a></div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Contact</a>
+                        <a href="contact.html#page-header">Contact</a>
                     </div>
                 </nav>
             </section>
@@ -74,7 +74,9 @@
         <section id="home-main2" class="flex-row">
             <div>
                 <img src="images/shot021.jpg" alt="">
-                <button>Service</button>
+                <a href="services.html#page-header">
+                    <button>Service</button>
+                </a>
             </div>
             <div>
                 <img src="images/shot022.jpg" alt="">
@@ -84,7 +86,9 @@
             </div>
             <div>
                 <img src="images/shot023.jpg" alt="">
-                <button>FAQ</button>
+                <a href="faq.html#page-header">
+                    <button>FAQ</button>
+                </a>
             </div>
         </section>
         <section id="home-main3" class="flex-row">   
