--- a/services.html
+++ b/services.html
@@ -38,11 +38,11 @@
                     <a href="booking.html#page-header">Booking</a>
                 </div>
                 <div class="dropdown">
-                    <a href="#">FAQ</a>
-                    <div class="dropdown-item"><a href="#">Policy</a></div>
+                    <a href="faq.html#page-header">FAQ</a>
+                    <div class="dropdown-item"><a href="faq.html#policy">Policy</a></div>
                 </div>
                 <div class="dropdown">
-                    <a href="#">Contact</a>
+                    <a href="contact.html#page-header">Contact</a>
                 </div>
             </nav>
         </div>
@@ -67,7 +67,7 @@
             <h2>Physiotherapy</h2>
             <div class="flex-row">
                 <div class="image">
-                    <img src="images/physiotherapy.png" alt="" style="">
+                    <img src="images/physiotherapy.png" alt="" >
                 </div>
                 <div class="description">
                     <p>Our physiotherapy sessions include a detailed history, a thorough assessment of your mobility, strength, and coordination, and identification of any underlying issues. You’ll receive expert guidance on treatment options, preventative strategies, and a personalized recovery plan. These sessions are ideal for clients with recent or chronic injuries who are seeking an active approach to recovery.</p>
@@ -114,5 +114,4 @@
         </div>
     </footer>
 </body>
-
 </html>
