--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
     </header>
     <i id="topBtn" class=" fa fa-angle-up" onclick="topFunction()" title="Go to top"></i>
     <main>
-        <section class="flex-row">
+        <section id="contact-info" class="flex-row">
             <div>
                 <h3>Location</h3>
                 <p>306/180-186 Burwood Rd, <br>
