--- a/faq.html
+++ b/faq.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/faq.css">
     <link rel="icon" href="images/favicon.png">
     <script src="assets/goTop.js" defer></script> 
+    <script src="assets/toggleAnswer.js" defer></script> 
 </head>
 
 <body>
@@ -56,54 +57,54 @@
         <section id="faq">
             <h2>General</h2>
             <div class="question">
-                <h3>Can I walk in to see a therapist?</h3>
+                <h3 onclick="toggleAns(this)">Can I walk in to see a therapist?</h3>
                 <p>We operated by appointment. Please book your session with customer service before visiting! For any inquiries, we highly encourage you to communicate with customer service via texts and emails because our therapists are always paying 100% attention and effort to our clients and may not have time to answer your questions.
                 </p>
             </div>
             <div class="question">
-                <h3>How do I book?</h3>
+                <h3 onclick="toggleAns(this)">How do I book?</h3>
                 <p>You can find how to book on our website. We also accept booking via emails, phone, text message or social media. You will receive a text message reminder in 48 hours before your session.
                 </p>
             </div>
             <div class="question">
-                <h3>Any Parking?</h3>
+                <h3 onclick="toggleAns(this)">Any Parking?</h3>
                 <p>We are located across from Burwood Plaza, which offers 2 hours of free parking. Additionally, Burleigh Street parking is just a 2-minute walk from the studio—please note that fees may apply.
                 </p>
             </div>
             <div class="question">
-                <h3>Can I change clothes at your studio?</h3>
+                <h3 onclick="toggleAns(this)">Can I change clothes at your studio?</h3>
                 <p>Yes, we have a clean common bathroom next to our studio, feel free to ask our staff for directions.
                 </p>
             </div>
             <div class="question">
-                <h3>What should I wear to our studio?</h3>
+                <h3 onclick="toggleAns(this)">What should I wear to our studio?</h3>
                 <p>Wear your favorite comfortable activewear! Make sure it’s not baggy so your therapist can see your movements. Non-slip socks are <span class="emphasize">required</span>, or simply purchase some pretty ones from us!
                 </p>
             </div>
             <div class="question">
-                <h3>What should I bring to our studio?</h3>
+                <h3 onclick="toggleAns(this)">What should I bring to our studio?</h3>
                 <p>Your happy self! And maybe a towel and water bottle. If you're claiming insurance, please bring your card. We provide all essential equipment and mats.
                 </p>
             </div>
             <div class="question">
-                <h3>What happens in Consultation session?</h3>
+                <h3 onclick="toggleAns(this)">What happens in Consultation session?</h3>
                 <p>Your therapist will gather information about your general health, recent injuries, and goals to start with, then you will be asked to perform some tests. The results will be explained to you, and your treatment/exercise plan will be made according to your assessment results and your goals.
                 </p>
             </div>
             <div class="question">
-                <h3>Do you offer manual therapy?</h3>
+                <h3 onclick="toggleAns(this)">Do you offer manual therapy?</h3>
                 <p>At our clinic, we emphasize active treatment and movement therapy as the foundation of recovery. While we recognize that passive treatments, such as pain management through various modalities, can be beneficial in the early stages of an injury, our focus is on helping clients regain their daily function through purposeful movement. Our physiotherapy sessions prioritize active treatments and exercises, with guidance for managing acute injuries. Our goal is to help you get back on track as quickly as possible—so get ready to move with us!
                 </p>
             </div>
             <br><br>
             <h2>Cancellation and reschedule</h2>
             <div class="question">
-                <h3>What is your cancellation policy?</h3>
+                <h3 onclick="toggleAns(this)">What is your cancellation policy?</h3>
                 <p>We kindly ask for at least 24 hours' notice if you need to cancel or reschedule your session. This allows us to offer the spot to another client and keep our schedule running smoothly. Late cancellations or no-shows will incur full charge. Thank you for your understanding and cooperation!
                 </p>
             </div>
             <div class="question">
-                <h3>Before Booking</h3>
+                <h3 onclick="toggleAns(this)">Before Booking</h3>
                 <p>Please take a moment to review our policy before making any bookings. By confirming your appointment, you acknowledge that you fully understand and agree to the terms outlined. We kindly ask that you arrive on time for your session to ensure a smooth experience for all. Thank you for your cooperation.
                 </p>
             </div>
