--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 <body>
     <header id="header">
         <a href="index.html">
-            <img id="home-logo" alt="Contrology Studio" src="images/logo-white.png">
+            <img id="logo" alt="Contrology Studio" src="images/logo-white.png">
         </a>
         <div id="menu-sect">
             <nav>
