Official launched on 2025.02.16

--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="assets/styles.css">
     <link rel="stylesheet" href="assets/contact.css">
     <link rel="icon" href="images/favicon.png">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BW7WHWGVHE"></script>
+    <script src="assets/analytics.js"></script>
     <script src="assets/goTop.js" defer></script> 
 </head>
 
@@ -72,11 +75,8 @@
             </div>
             <div>
                 <h3>Hours</h3>
-                <p>Mon, Tues, Thurs, Fri - 8 am to 6 pm <br>
-                    Wed - 2 pm to 8 pm <br>
-                    Sat & Sun - 9 am to 1 pm
-                </p>
-                <p>By Appointment Only</p>
+                <p>Monday - Sunday <br></p>
+                <p><br><br>By Appointment Only</p>
             </div>
         </section>
     </main>
