--- a/faq.html
+++ b/faq.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="assets/styles.css">
     <link rel="stylesheet" href="assets/faq.css">
     <link rel="icon" href="images/favicon.png">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BW7WHWGVHE"></script>
+    <script src="assets/analytics.js"></script>
     <script src="assets/goTop.js" defer></script> 
     <script src="assets/toggleAnswer.js" defer></script> 
 </head>
