--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="assets/styles.css">
     <link rel="stylesheet" href="assets/index.css">
     <link rel="icon" href="images/favicon.png">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BW7WHWGVHE"></script>
+    <script src="assets/analytics.js"></script>
     <script src="assets/goTop.js" defer></script> 
 </head>
 
@@ -117,18 +120,13 @@
         <section id="home-main5" class="">
             <div id="flow-with-us">
                 <h2>Flow with Us</h2>
-                <p>306/180-186 Burwood Rd, Burwood NSW 2154</p>
+                <p>306/180-186 Burwood Rd, Burwood NSW 2134</p>
                 <p>Phone: 0413091144 <br> 
                    <span class="small-text">(English, Cantonese and Mandarin)</span>
                 </p>
                 <p>Email: <span class="small-text">contrologystudio.sydney@gmail.com</span></p>
                 <h3 id="open-hours">OPEN HOURS</h3>
-                <p>Mon, Tues, Thurs, Fri <br>
-                8 am to 6 pm</p>
-                <p>Wed <br>
-                2 pm to 8 pm</p>
-                <p>Sat & Sun <br>
-                9 am to 1 pm</p>
+                <p>Mon to Sun</p>
                 <p>By Appointment Only</p>
             </div>
             <div id="follow-us">
@@ -154,7 +152,7 @@
                 <h3>Follow us on WeChat</h3>
                 <p>Add us by scanning the QR code below from WeChat:</p>
                 <div>
-                    <img src="images/wechat.jpg" alt="">
+                    <img src="images/wecht.jpg" alt="">
                 </div>
                 <button class="close-btn" onclick="document.getElementById('wechat-modal').style.display='none'">X</button>
             </div>
